--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -17,29 +17,18 @@
 </head>
 <!--#4d4c51-->
 <body ng-app="storeHome" style="background-color: lightblue;">
-    <div class="controller" ng-controller="SearchCtrl">
+    <div ng-controller="popupCtrl">
         <div class="dark_background">
         </div><!--end div dark_background-->
         <div class="authorization">
             <div class="close-popup-authorization"></div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12 top-nav-authorization">
-                        <div class="authorization-top-text">
-                            <span ng-if="language == 'EN'">Login</span>
-                            <span ng-if="language == 'RU'">Вход</span>
-                        </div><!--end div authorization-top-text-->
-                    </div><!--end div top-nav-authorization-->
-                    <div class="col-xs-12 authorization-form">
-                        <form asp-controller="User" asp-action="login" method="post">
-                            <label asp-for="login"></label>
-                            <input asp-for="login" id="login" type="text" />
-                        </form>
-                    </div>
-                </div><!--end div row-->
-            </div><!--end div container-fluid < authorization-->
+            <div class="popup">
+            </div>
         </div><!--end div authorization-->
-    <!--=================================================-->
+        <!--=================================================-->
+    </div>
+
+    <div class="controller" ng-controller="SearchCtrl">
         <div class="pre-loader" ng-if="loader == false">
             <div class="round">
             </div><!--end div round-->
@@ -77,7 +66,7 @@
                             </a><!--end a class=top-navbar-item search-img-->
                         </div><!--end div search col-->
                         <div class="col-xs-2">
-                            <a href="#" class="navbar-item  no-nav lk">
+                            <a href="#" class="navbar-item  no-nav lk" ng-click="popupLK()">
                                 <img src="~/images/HomeLayout/lk.png" id="lk-img"
                                      onmouseover="this.src = '/images/HomeLayout/lk_hover.png'"
                                      onmouseout="this.src = '/images/HomeLayout/lk.png'" />
@@ -202,9 +191,13 @@
 </body>
 </html>
 <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
+@{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 <script asp-src-include="~/js/frameworks/*.js" asp-src-exclude="~/js/frameworks/jquery.js" type="text/javascript"></script>
 <script asp-src-include="~/js/HomeLayout/*.js" type="text/javascript"></script>
+
+
 @RenderSection("Scripts",required: false)
+<script asp-src-include="~/js/HomeLayout/app/*.js" type="text/javascript"></script>
 <script>
     $(document).ready(function () {
         Load();
