--- a/src/AppleStore/Views/Partials/LogOut.en-US.cshtml
+++ b/src/AppleStore/Views/Partials/LogOut.en-US.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model String
+@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+
+<div class="loggedin-page">
+    <div class="col-xs-12 loggedin-title">
+        <span>Info</span>
+    </div>
+    <div class="loggedin-info-text">
+        <div class="col-xs-12">
+            <span>You are authorized</span><br />
+            <span>as @Model</span>
+        </div>
+        <span class="error-text text-danger"></span>
+    </div>
+    <div class="loggedin-byttons">
+        <button type="button" class="popup-register-button logout">Logout</button>
+        <br /><br />
+        <button type="button" class="popup-register-button cancel-logout">Cancel</button>
+    </div>
+</div>
+<script type="text/javascript">
+    $(".authorization").css("left", "57%");
+    $(".logout").click(function () {
+        $.ajax({
+            type: "POST",
+            url: "/Auth/Logout",
+            success: function (response) {
+                if (response == false) {
+                    $(".error-text").html("There was an error<br/>Please try again later");
+                }
+                else if (response == true) {
+                    $(".dark_background").trigger("click");
+                    $(".lk").attr("title", "");
+                }
+            }
+        });
+    });
+    $(".cancel-logout").click(function () {
+        $(".dark_background").trigger("click");
+    });
+</script>
+
