--- a/src/AppleStore/wwwroot/css/HomeLayout/popups.css
+++ b/src/AppleStore/wwwroot/css/HomeLayout/popups.css
@@ -25,16 +25,11 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
-/*.popup{
-    margin-top: 50px;
-    height: 400px;
-    background: white;
-}*/
 .close-popup-authorization{
     position:absolute;
     width: 25px;
     height: 25px;
-    margin-top: 25px;
+    margin-top: 15px;
     right:2px;
     
 }
@@ -140,7 +135,7 @@ textarea:focus, input:focus{
     margin-left: 15px;
     color: black;
 }
-.login-page{
+.login-page,.loggedin-page{
     width: 350px;
     height: 400px;
 }
@@ -167,7 +162,38 @@ textarea:focus, input:focus{
     background: lightgray;
     width: 100%;
 }
-
+.loggedin-page{
+    margin-top: 10px;
+    
+}
+.loggedin-title{
+    height: 70px;
+}
+.loggedin-title span{
+    font-family: OpenSans-Light;
+    font-size: 40px;
+    margin-top: 35px;
+    color: #4d4c51;
+    left: 25px;
+}
+.loggedin-info-text{
+    position:relative;
+    top: 10%;
+    width: 350px;
+}
+.loggedin-info-text div span{
+    font-family: OpenSans-Light;
+    font-size: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.loggedin-byttons{
+    position:relative;
+    top: 20%;
+    margin-left: 10%;
+}
 
 @media (min-width: 1200px){
     
