--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -55,12 +55,12 @@
                     </a><!--end a class=logo-->
                     <div class="top-navbar-menu">
                         <div class="col-xs-2">
-                            <a href="#" class="navbar-item" id="gum" onmousedown="showMenu()">
+                            <a href="#" class="navbar-item" title="Show menu" id="gum" onmousedown="showMenu()">
                                 <img src="~/images/HomeLayout/gam_menu.png" class="menu not-active-menu" id="gam-menu-img" />
                             </a><!--end a class=top-navbar-item gam-menu-img-->
                         </div><!--end div gum col-->
                         <div class="col-xs-2">
-                            <a href="#" class="navbar-item no-nav">
+                            <a href="#" title="Search" class="navbar-item no-nav">
                                 <img src="~/images/HomeLayout/search.png" id="search-img"
                                      onmouseover="this.src = '/images/HomeLayout/search_hover.png'"
                                      onmouseout="this.src = '/images/HomeLayout/search.png'" />
@@ -74,14 +74,14 @@
                             </a><!--end a class=top-navbar-item lk-img-->
                         </div><!--end div lk col-->
                         <div class="col-xs-2">
-                            <a href="#" class="navbar-item  no-nav">
+                            <a href="#" class="navbar-item  no-nav" title="Cart">
                                 <img src="~/images/HomeLayout/kart.png" id="kart-img"
                                      onmouseover="this.src = '/images/HomeLayout/kart_hover.png'"
                                      onmouseout="this.src = '/images/HomeLayout/kart.png'" />
                             </a><!--end a class=top-navbar-item kart-img-->
                         </div><!--end div kart col-->
                         <div class="col-xs-3  no-nav">
-                            <a href="#" id="language" ng-click="ChangeLanguage(language)">{{language}}</a><!--begin & end a language-->
+                            <a href="#" id="language" title="Page language" ng-click="ChangeLanguage(language)">{{language}}</a><!--begin & end a language-->
                         </div><!--end div language col-->
                     </div><!--end div top-navbar-menu-->
                 </div><!--end div top-navbar-row-->
