--- a/src/AppleStore/wwwroot/css/HomeLayout/popups.css
+++ b/src/AppleStore/wwwroot/css/HomeLayout/popups.css
@@ -3,7 +3,7 @@
     src: url(../../fonts/HomeLayout/OpenSans-Light.ttf); /* Путь к файлу со шрифтом */
 }
 .dark_background{
-    /*display: none;*/
+    display: none;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -14,6 +14,7 @@
     opacity: 0.8;
 }
 .authorization{
+    display: none;
     position:fixed;
     top: 15%;
     left: 50%;
