--- a/src/AppleStore/Views/iPod/Index.cshtml
+++ b/src/AppleStore/Views/iPod/Index.cshtml
@@ -94,14 +94,14 @@
                             <div class="row element-hover-text">
 
                                 <div class="element-hover-text-div">
-                                    <span ng-if="language == 'EN'">Processor: &nbsp;</span>
-                                    <span ng-if="language == 'RU'">Процессор: &nbsp;</span>
-                                    <span>{{element.ProductDetails | GetProcessor }} Core</span>
+                                    <span ng-if="language == 'EN'">HD: &nbsp;</span>
+                                    <span ng-if="language == 'RU'">Память: &nbsp;</span>
+                                    <span>{{element.ProductDetails | GetProcessor }}</span>
                                 </div><!--end div processor-->
 
                                 <div class="element-hover-text-div">
-                                    <span ng-if="language == 'EN'">RAM: &nbsp;</span>
-                                    <span ng-if="language == 'RU'">Оперативная память: &nbsp;</span>
+                                    <span ng-if="language == 'EN'">FM-Radio: &nbsp;</span>
+                                    <span ng-if="language == 'RU'">FM-радио: &nbsp;</span>
                                     <span>{{element.ProductDetails | GetRam }}</span>
                                 </div><!--end div RAM-->
 
