--- a/src/AppleStore/Views/Accessories/AccessoriesItem.en-US.cshtml
+++ b/src/AppleStore/Views/Accessories/AccessoriesItem.en-US.cshtml
@@ -73,7 +73,9 @@
                                 <div class="ident"></div>
                                 <button type="button" title="Add {{item.Model}} to Cart" 
                                         class="cart-button" ng-click="addtocart(item.AppleID)">Add to Cart</button>
-                            <div class="ident"></div>
+                                <div class="ident"></div>
+                                <span class="cart-message">{{cartmessage}}</span>
+                                <div class="ident"></div>
                             </div><!--end div cart-button-column-->
                         </div><!--end div column price and buttons-->
                         <div class="col-lg-offset-1 col-lg-5 col-md-12 col-sm-12 col-xs-12">
