--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -74,7 +74,7 @@
                             </a><!--end a class=top-navbar-item lk-img-->
                         </div><!--end div lk col-->
                         <div class="col-xs-2">
-                            <a href="#" class="navbar-item  no-nav" title="Cart">
+                            <a href="#" ng-click="cart()" class="navbar-item  no-nav" title="Cart">
                                 <img src="~/images/HomeLayout/kart.png" id="kart-img"
                                      onmouseover="this.src = '/images/HomeLayout/kart_hover.png'"
                                      onmouseout="this.src = '/images/HomeLayout/kart.png'" />
