--- a/src/AppleStore/Views/iPod/iPodItem.ru-RU.cshtml
+++ b/src/AppleStore/Views/iPod/iPodItem.ru-RU.cshtml
@@ -76,6 +76,8 @@
                                 Добавить в корзину
                             </button>
                             <div class="ident"></div>
+                            <span class="cart-message">{{cartmessage}}</span>
+                            <div class="ident"></div>
                         </div><!--end div cart-button-column-->
                     </div><!--end div column price and buttons-->
                     <div class="col-lg-offset-1 col-lg-5 col-md-12 col-sm-12 col-xs-12">
