--- a/src/AppleStore/wwwroot/css/HomeLayout/cartPreloader.css
+++ b/src/AppleStore/wwwroot/css/HomeLayout/cartPreloader.css
@@ -1,16 +1,16 @@
-﻿.pre-loader{
-    position: fixed;
-    width: 100%;
-    height: 100%;
+﻿.pre-loader-cart{
+    position: absolute;
+    width: 600px;
+    height: 400px;
     background-color: lightgray;
     z-index: 5;
     padding-top: 10%;
 }
-.round,.round:before,.round:after{
+.round-cart,.round:before,.round:after{
     border: 3px solid transparent;
     border-radius: 50%;
 }
-.round{
+.round-cart{
     position:relative;
     width: 200px;
     height: 200px;
@@ -21,11 +21,11 @@
     -o-animation: spin 1.5s infinite ease;
     animation: spin 1.5s infinite ease;
 }
-.round:before, .round:after{
+.round-cart:before, .round-cart:after{
     content:'';
     position:absolute;
 }
-.round:before{
+.round-cart:before{
     top:10px;
     left:10px;
     right:10px;
@@ -35,7 +35,7 @@
     -o-animation: spin 2.5s infinite ease;
     animation: spin 2.5s infinite ease;
 }
-.round:after{
+.round-cart:after{
     top:23px;
     left:23px;
     right:23px;
