--- a/src/AppleStore/wwwroot/css/Mac/item.css
+++ b/src/AppleStore/wwwroot/css/Mac/item.css
@@ -13,6 +13,12 @@
     margin-top: 5%;
     top: 5%;
 }
+.cart-message{
+    font-family: OpenSans-Light;
+    font-size: 20px;
+    color: #4d4c51;
+    display: none;
+}
 .images-list:hover{
     cursor:pointer;
 }
