--- a/src/AppleStore/wwwroot/css/Watch/item.css
+++ b/src/AppleStore/wwwroot/css/Watch/item.css
@@ -5,6 +5,12 @@
 .images-list:hover{
     cursor:pointer;
 }
+.cart-message{
+    font-family: OpenSans-Light;
+    font-size: 20px;
+    color: #4d4c51;
+    display: none;
+}
 .main-image{
     position: relative;
     display: block;
