--- a/src/AppleStore/wwwroot/css/iPad/item.css
+++ b/src/AppleStore/wwwroot/css/iPad/item.css
@@ -2,7 +2,14 @@
     font-family: OpenSans-Light; /* Гарнитура шрифта */
     src: url(../../fonts/HomeLayout/OpenSans-Light.ttf); /* Путь к файлу со шрифтом */
 }
-.images-list:hover{
+
+.cart-message{
+    font-family: OpenSans-Light;
+    font-size: 20px;
+    color: #4d4c51;
+    display: none;
+}
+.item-image-div:hover{
     cursor:pointer;
 }
 .main-image{
@@ -18,6 +25,16 @@
 .ident{
     height: 20px;
 }
+.item-image-div{
+    position:relative;
+    height: 120px;
+    width: 120px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 5%;
+    top: 5%;
+    background-color: white;
+}
 .images-list{
     position: relative;
     display: block;
@@ -25,8 +42,8 @@
     height: 100px;
     margin-left:auto;
     margin-right: auto;
-    margin-top: 5%;
-    top: 5%;
+    margin-top: 5px;
+    top: 5px;
 }
 .image-border{
     border: 3px solid #4d4c51;
