--- a/src/AppleStore/wwwroot/css/iPhone/item.css
+++ b/src/AppleStore/wwwroot/css/iPhone/item.css
@@ -79,6 +79,12 @@
 .ident2{
     height: 50px;
 }
+.cart-message{
+    font-family: OpenSans-Light;
+    font-size: 20px;
+    color: #4d4c51;
+    display: none;
+}
 
 @media (min-width: 1200px){
     
