--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -192,7 +192,7 @@
 </body>
 </html>
 <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
-@{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+@*@{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }*@
 <script asp-src-include="~/js/frameworks/*.js" asp-src-exclude="~/js/frameworks/jquery.js" type="text/javascript"></script>
 <script asp-src-include="~/js/HomeLayout/*.js" type="text/javascript"></script>
 
