--- a/src/AppleStore/wwwroot/css/Accessories/item.css
+++ b/src/AppleStore/wwwroot/css/Accessories/item.css
@@ -18,6 +18,19 @@
 .ident{
     height: 20px;
 }
+.item-image-div{
+    position:relative;
+    height: 120px;
+    width: 120px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 5%;
+    top: 5%;
+    background-color: white;
+}
+.item-image-div:hover{
+    cursor:pointer;
+}
 .images-list{
     position: relative;
     display: block;
@@ -25,8 +38,8 @@
     height: 100px;
     margin-left:auto;
     margin-right: auto;
-    margin-top: 5%;
-    top: 5%;
+    margin-top: 5px;
+    top: 5px;
 }
 .image-border{
     border: 3px solid #4d4c51;
