--- a/src/AppleStore/wwwroot/css/Watch/item.css
+++ b/src/AppleStore/wwwroot/css/Watch/item.css
@@ -24,6 +24,19 @@
 .ident{
     height: 20px;
 }
+.item-image-div{
+    position:relative;
+    height: 120px;
+    width: 120px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 5%;
+    top: 5%;
+    background-color: white;
+}
+.item-image-div:hover{
+    cursor:pointer;
+}
 .images-list{
     position: relative;
     display: block;
@@ -31,8 +44,8 @@
     height: 100px;
     margin-left:auto;
     margin-right: auto;
-    margin-top: 5%;
-    top: 5%;
+    margin-top: 5px;
+    top: 5px;
 }
 .image-border{
     border: 3px solid #4d4c51;
@@ -84,6 +97,9 @@
 }
 .ident2{
     height: 50px;
+}
+.item-image-div:hover{
+    cursor:pointer;
 }
 
 @media (min-width: 1200px){
