--- a/src/AppleStore/wwwroot/css/iPod/item.css
+++ b/src/AppleStore/wwwroot/css/iPod/item.css
@@ -2,6 +2,7 @@
     font-family: OpenSans-Light; /* Гарнитура шрифта */
     src: url(../../fonts/HomeLayout/OpenSans-Light.ttf); /* Путь к файлу со шрифтом */
 }
+
 .images-list:hover{
     cursor:pointer;
 }
@@ -24,6 +25,19 @@
 .ident{
     height: 20px;
 }
+.item-image-div{
+    position:relative;
+    height: 120px;
+    width: 120px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 5%;
+    top: 5%;
+    background-color: white;
+}
+.item-image-div:hover{
+    cursor:pointer;
+}
 .images-list{
     position: relative;
     display: block;
@@ -31,8 +45,8 @@
     height: 100px;
     margin-left:auto;
     margin-right: auto;
-    margin-top: 5%;
-    top: 5%;
+    margin-top: 5px;
+    top: 5px;
 }
 .image-border{
     border: 3px solid #4d4c51;
