--- a/src/AppleStore/Views/Partials/Login.en-US.cshtml
+++ b/src/AppleStore/Views/Partials/Login.en-US.cshtml
@@ -28,18 +28,18 @@
         <span class="text-danger error-text"></span><br />
     </form>
     <div class="social-login">
-        <div class="col-xs-6">
+        <div class="col-xs-5">
             <div class="social-login-text">
                 Login By
             </div>
         </div>
-        <div class="col-xs-6 social-buttons-div">
+        <div class="col-xs-7 social-buttons-div">
             <form asp-controller="Auth" asp-action="ExternalLogin" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal" role="form">
                 <div id="socialLoginList">
                         @foreach (var p in loginProviders)
                         {
                             <button type="submit" id="@p.AuthenticationScheme" name="provider" 
-                                    title="Log in using your @p.DisplayName account"></button>
+                                    title="Log in using your @p.DisplayName account" value="@p.AuthenticationScheme"></button>
                         }
                     <input type="text" class="hidden" name="returnUrl" value="/Home/Index" />
                 </div>
