--- a/src/AppleStore/wwwroot/css/Cart/ordering.css
+++ b/src/AppleStore/wwwroot/css/Cart/ordering.css
@@ -4,7 +4,7 @@
 }
 
 .ordering-main{
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     max-width: 600px;
 }
 .show-hide-ordering-div{
@@ -70,4 +70,103 @@
 .moved-underline-div{
     position:relative;
     width: 570px;
+}
+
+
+.ordering-data{
+    padding-top: 20px;
+}
+.new-user-order-field{
+    /*display: none;*/
+}
+.steady-customer-order-field{
+    display: none;
+}
+.new-user-order-title, .new-user-delivery-title{
+    font-family: OpenSans-Light;
+    font-size: 15px;
+    height: 25px;
+    padding-top: 5px;
+    margin-bottom: 10px;
+}
+.new-user-delivery-title{
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.new-user-delivery-complete-fields{
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-bottom: 20px;
+}
+.new-user-order-text-fields{
+    margin-bottom: 20px;
+    padding-top: 5px;
+}
+.ordering-text-input{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    width: 100%;
+    border: none;
+    background-color: lightgray;
+    padding-left: 10px;
+    padding-right: 10px;
+    outline: hidden;
+    height: 30px;
+    font-family: OpenSans-Light;
+    font-size: 15px;
+}
+.new-user-delivery-field{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.doropdwn{
+    width: 100%;
+    height: 30px;
+    background-color: lightgray;
+    border: none;
+    outline: none;
+    font-family: OpenSans-Light;
+    font-size: 15px;
+    padding-left: 10px;
+    margin-bottom: 5px;
+}
+.doropdwn:active, .doropdwn option:active{
+    border: none;
+    outline: none;
+}
+.doropdwn option{
+    border: none;
+    background-color: white;
+    outline: none;
+}
+.doropdwn option:hover, .doropdwn:hover{
+    background-color: lightgray;
+}
+.doropdwn option li:hover{
+ border: none;
+}
+.cart-ordering-submit-button{
+    border: none;
+    outline: none;
+    background-color: #4d4c51;
+    font-family: OpenSans-Light;
+    font-size: 15px;
+    color: white;
+    height: 40px;
+    width: 200px;
+}
+.ordering-login-button{
+    width: 200px;
+    height: 30px;
+    background-color: #4d4c51;
+    font-family: OpenSans-Light;
+    font-size: 17px;
+    text-align: center;
+}
+.text-danger error-text{
+    left: 30%;
 }
