--- a/src/AppleStore/Views/Partials/PlaceOrder-US.cshtml
+++ b/src/AppleStore/Views/Partials/PlaceOrder-US.cshtml
@@ -54,7 +54,7 @@
         <div class="col-xs-12 ordering-data">
             <div class="col-xs-12 new-user-order-field" style="display: block">
                 <div class="col-xs-offset-1 col-xs-10">
-                    <form asp-controller="Cart" asp-action="PlaceAnOrder" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal" role="form">
+                    <form asp-controller="Cart" asp-action="PlaceAnOrder" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal ordering-form" role="form">
 
                         <div class="col-xs-12 new-user-order-title">
                             Personal Information
