--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -22,6 +22,10 @@
         </div><!--end div dark_background-->
         
         <div class="authorization">
+            <div class="pre-loader-popup">
+                <div class="round">
+                </div><!--end div round-->
+            </div><!--end div pre-loader-->
             <div class="close-popup-authorization"></div>
             <div class="popup">
             </div>
