--- a/src/AppleStore/Views/Auth/Login-En.cshtml
+++ b/src/AppleStore/Views/Auth/Login-En.cshtml
@@ -1,9 +1,13 @@
 ﻿@model AppleStore.ViewModels.Account.LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
-@{ 
+@{
+    Layout = "_HomeLayout";
+}
+@{
     var loginProviders = SignInManager.GetExternalAuthenticationSchemes();}
-<div class="login-page">
+<div class="login-page col-xs-12">
+    <div class="text-center" style="margin-left: 0%;">
     <div class="form-title col-xs-12">
         <span>Login</span>
     </div>
@@ -15,7 +19,7 @@
             <div class="col-xs-12">
                 <input type="text" asp-for="Password" placeholder="Password" class="popup-input" />
             </div>
-            <div class="col-xs-12 login-middle">
+            <div class="col-xs-12 login-middle" style="width: 350px; margin-left: 500px;">
                 <div class="col-xs-6 login-links">
                     <a href="#" class="gotoreg">Register</a><br />
                     <a href="#">Forgot password</a>
@@ -27,7 +31,7 @@
         </div>
         <span class="text-danger error-text"></span><br />
     </form>
-    <div class="social-login">
+    <div class="social-login" style="width: 350px; margin-left: 500px;">
         <div class="col-xs-5">
             <div class="social-login-text">
                 Login By
@@ -36,17 +40,19 @@
         <div class="col-xs-7 social-buttons-div">
             <form asp-controller="Auth" asp-action="ExternalLogin" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal" role="form">
                 <div id="socialLoginList">
-                        @foreach (var p in loginProviders)
-                        {
-                            <button type="submit" id="@p.AuthenticationScheme" name="provider" 
-                                    title="Log in using your @p.DisplayName account" value="@p.AuthenticationScheme"></button>
-                        }
+                    @foreach (var p in loginProviders)
+                    {
+                        <button type="submit" id="@p.AuthenticationScheme" name="provider"
+                                title="Log in using your @p.DisplayName account" value="@p.AuthenticationScheme"></button>
+                    }
                     <input type="text" class="hidden" name="returnUrl" value="/Home/Index" />
                 </div>
             </form>
         </div>
     </div>
+    </div>
 </div>
+@section Scripts{
 <script type="text/javascript">
     function load(){
         setTimeout(function () {
@@ -74,7 +80,8 @@
                         success: function (userName) {
                             $(".lk").attr("title", userName);
                             $("#lk-img").attr("onmouseout", "this.src = '/images/HomeLayout/lk_login.png'");
-                            $("#lk-img").attr("src","/images/HomeLayout/lk_login.png");
+                            $("#lk-img").attr("src", "/images/HomeLayout/lk_login.png");
+                            window.location.href = @ViewData["ReturnUrl"];
                         }
                     });
                 }
@@ -90,6 +97,11 @@
             }
         });
     });
+    function Load() {
 
+    }
+    function FilterPosition() { }
 </script>
-
+<script type="text/javascript" src="~/js/Auth/app/app.js"></script>
+<script type="text/javascript" src="~/js/Auth/app/controller.js"></script>
+    }
