--- a/src/AppleStore/Views/Shared/_HomeLayout.cshtml
+++ b/src/AppleStore/Views/Shared/_HomeLayout.cshtml
@@ -16,7 +16,7 @@
     @RenderSection("Styles",required: false)
 </head>
 <!--#4d4c51-->
-<body ng-app="storeHome" style="background-color: lightblue;">
+<body ng-app="storeHome" style="background-color: #4d4c51;">
     <div ng-controller="popupCtrl">
         <div class="dark_background">
         </div><!--end div dark_background-->
