--- a/src/AppleStore/Views/Partials/PlaceOrder-RU.cshtml
+++ b/src/AppleStore/Views/Partials/PlaceOrder-RU.cshtml
@@ -1,5 +1,194 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model AppleStore.ViewModels.Account.LoginNewUserOrderViewModel
+@inject SignInManager<ApplicationUser> SignInManager
+@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
 @{
+    var loginProviders = SignInManager.GetExternalAuthenticationSchemes();
 }
+
+<link type="text/css" href="~/css/Cart/ordering.css" rel="stylesheet" />
+<div class="col-xs-12 ordering-main">
+    <div class="col-xs-8 ordering-title">
+        Ordering Options
+    </div><!--end div ordering-title-->
+    <div class="col-xs-12 show-hide-ordering-div">
+        <span>Show ordering data</span>
+    </div>
+    <div class="col-xs-12 cart-data">
+        @{Int32 i = 0; }
+        @foreach (var apple in Model.Apple.Keys)
+        {
+            <div class="col-xs-12 cart-data-items">
+                <div class="col-xs-1">@{++i;}</div>
+                <div class="col-xs-6">@apple.Model</div>
+                <div class="col-xs-2">@Model.Apple[apple] pcs</div>
+                <div class="col-xs-3">
+                    @apple.Price.ToString("C2", System.Globalization.CultureInfo.CreateSpecificCulture("en-US"))
+                </div>
+                @*<div class="col-xs-3">@apple.Price.ToString("C2",System.Globalization.CultureInfo.CreateSpecificCulture("uk-UA"))</div>*@
+            </div>
+                    }
+        @{
+            Decimal total = 0;
+            foreach (var app in Model.Apple.Keys)
+            {
+                total += (app.Price * Model.Apple[app]);
+            }
+        }
+        <div class="col-xs-offset-7 col-xs-5 orering-total-price">Total:&nbsp; @total.ToString("C2", System.Globalization.CultureInfo.CreateSpecificCulture("en-US"))</div>
+        <div class="col-xs-12 underline"></div>
+    </div><!--end div cart-data-->
+
+    <div class="ordering-place-order-main">
+        <div class="col-xs-12 ordering-title">
+            Place an Order
+        </div>
+        <div class="col-xs-12 orering-user-menus">
+            <div class="col-xs-6"><a href="#" class="ordering-user-links" id="new-user">New User</a></div>
+            <div class="col-xs-6"><a href="#" class="ordering-user-links" id="steady-customer">Steady Customer</a></div>
+            <div class="col-xs-12 moved-underline-div">
+                <div class="moved-underline"></div>
+            </div>
+
+        </div><!--end div orering-user-menus-->
+
+        <div class="col-xs-12 ordering-data">
+            <div class="col-xs-12 new-user-order-field" style="display: block">
+                <div class="col-xs-offset-1 col-xs-10">
+                    <form asp-controller="Cart" asp-action="PlaceAnOrder" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal ordering-form" role="form">
+
+                        <div class="col-xs-12 new-user-order-title">
+                            Personal Information
+                        </div><!--end div new-user-order-title-->
+                        <div class="col-xs-12 new-user-order-text-fields">
+                            <input type="text" placeholder="User Name" autocomplete="off" class="ordering-text-input" asp-for="UserName" name="UserName" />
+                            <input type="text" placeholder="Phone" autocomplete="off" class="ordering-text-input" asp-for="Phone" name="Phone" />
+                        </div><!--end div new-user-order-text-fields-->
+                        <div class="col-xs-12 new-user-delivery-field">
+                            <div class="col-xs-12 new-user-delivery-title">Delivery</div>
+                            <div class="col-xs-12 new-user-delivery-complete-fields">
+                                @Html.DropDownListFor(a => a.Delivery, Model.DeliveryList, new { @class = "doropdwn" })
+
+                                <input type="text" placeholder="Delivery Address" autocomplete="off" class="ordering-text-input" asp-for="Address" />
+                            </div>
+                        </div><!--end div new-user-delivery-field-->
+
+                        <div class="col-xs-12 new-user-delivery-field">
+                            <div class="col-xs-12 new-user-delivery-title">Payment</div>
+                            <div class="col-xs-12 new-user-delivery-complete-fields">
+                                @Html.DropDownListFor(a => a.Payment, Model.PaymentList, new { @class = "doropdwn" })
+                            </div>
+                        </div><!--end div new-user-delivery-field-->
+                        <div class="col-xs-offset-2 col-xs-4">
+                            <div class="col-xs-12">
+                                <div class="col-xs-offset-1">
+                                    <input class="cart-ordering-submit-button" type="submit" value="MAKE ORDER" />
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </form>
+                </div><!--end div col-xs-10-->
+            </div><!--end div new-user-order-field-->
+
+            <div class="col-xs-12 steady-customer-order-field text-center" style="display: none;">
+                @{
+                    if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="col-xs-offset-1 col-xs-10">
+                            <form asp-controller="Cart" asp-action="PlaceAnOrder" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal" role="form">
+
+                                <div class="col-xs-12 new-user-order-title">
+                                    Personal Information
+                                </div><!--end div new-user-order-title-->
+                                <div class="col-xs-12 new-user-order-text-fields">
+                                    <input type="text" placeholder="User Name" autocomplete="off" value="@Model.UserName" class="ordering-text-input" asp-for="UserName" name="UserName" />
+                                    <input type="text" placeholder="Phone" autocomplete="off" value="@Model.Phone" class="ordering-text-input" asp-for="Phone" name="Phone" />
+                                </div><!--end div new-user-order-text-fields-->
+                                <div class="col-xs-12 new-user-delivery-field">
+                                    <div class="col-xs-12 new-user-delivery-title">Delivery</div>
+                                    <div class="col-xs-12 new-user-delivery-complete-fields">
+                                        @Html.DropDownListFor(a => a.Delivery, Model.DeliveryList, new { @class = "doropdwn" })
+
+                                        <input type="text" placeholder="Delivery City" autocomplete="off" value="@Model.City" class="ordering-text-input" asp-for="City" />
+                                        <input type="text" placeholder="Delivery Address" autocomplete="off" value="@Model.Address" class="ordering-text-input" asp-for="Address" />
+                                    </div>
+                                </div><!--end div new-user-delivery-field-->
+
+                                <div class="col-xs-12 new-user-delivery-field">
+                                    <div class="col-xs-12 new-user-delivery-title">Payment</div>
+                                    <div class="col-xs-12 new-user-delivery-complete-fields">
+                                        @Html.DropDownListFor(a => a.Payment, Model.PaymentList, new { @class = "doropdwn" })
+                                    </div>
+                                </div><!--end div new-user-delivery-field-->
+                                <div class="col-xs-offset-2 col-xs-4">
+                                    <input class="cart-ordering-submit-button" type="submit" value="MAKE ORDER" />
+                                </div>
+
+
+                            </form>
+                        </div><!--end div col-xs-10-->
+
+                    }
+                    else
+                    {
+                        <div class="login-page">
+                            <div class="form-title col-xs-offset-2 col-xs-8">
+                                <span>Login</span>
+                            </div>
+                            <form asp-controller="Auth" asp-action="Login" class="log-form" autocomplete="off" method="post" role="form">
+                                <div class="text-danger">
+                                    <div class="col-xs-12">
+                                        <input type="text" asp-for="Email" placeholder="Email" class="popup-input" />
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <input type="text" asp-for="Password" placeholder="Password" class="popup-input" />
+                                    </div>
+                                    <div class="col-xs-12 login-middle">
+                                        <div class="col-xs-6 login-links">
+                                            <a href="#" class="gotoreg">Register</a><br />
+                                            <a href="#">Forgot password</a>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <button type="button" class="ordering-login-button">Login</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span class="text-danger error-text"></span><br />
+                            </form>
+                            <div class="social-login">
+                                <div class="col-xs-6">
+                                    <div class="social-login-text">
+                                        Login By
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 social-buttons-div">
+                                    <form asp-controller="Auth" asp-action="ExternalLogin"
+                                          asp-route-returnurl="@ViewBag.ReturnUrl" method="post" class="form-horizontal" role="form">
+                                        <div id="socialLoginList">
+                                            @foreach (var p in loginProviders)
+                                            {
+                                                <button type="submit" id="@p.AuthenticationScheme" name="provider"
+                                                        title="Log in using your @p.DisplayName account" value="@p.AuthenticationScheme"></button>
+                                            }
+                                            <input type="text" class="hidden" name="returnUrl" value="/Home/Index" />
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                    }
+                }
+
+            </div><!--end div steady-customer-order-field-->
+        </div><!--end div ordering-data-->
+    </div><!--end div ordering-place-order-main-->
+
+
+</div>
+<script src="~/js/Cart/ordering.js" type="text/javascript"></script>
+<script type="text/javascript">
+    OrderingLoad();
+
+</script>
