--- a/src/AppleStore/wwwroot/css/Cart/ordering.css
+++ b/src/AppleStore/wwwroot/css/Cart/ordering.css
@@ -158,6 +158,7 @@
     color: white;
     height: 40px;
     width: 200px;
+    left: 40px;
 }
 .ordering-login-button{
     width: 200px;
@@ -166,6 +167,8 @@
     font-family: OpenSans-Light;
     font-size: 17px;
     text-align: center;
+    border: none;
+    outline: none;
 }
 .text-danger error-text{
     left: 30%;
